--- a/index.html
+++ b/index.html
@@ -1,14 +1,30 @@
 <!DOCTYPE html>
 <html lang='es'>
 
-<head>
-  <meta charset='UTF-8'>
-  <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-  <meta name='viewport' content='width=device-width, initial-scale=1.0, minimum-scale=1.0,maximum-scale=1.0'>
-  <title>Teacher's Tools</title>
-  <link rel="stylesheet" href="./css/style.css">
-  <link rel="shortcut icon" href="./imagenes/favicon.png" type="image/x-icon">
-</head>
+  <!-- Titulo Principal (Pestaña Browser) -->
+  <title>Teacher Tools</title>
+
+  <!-- Configuración etiquetas Meta -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="theme-color" content="#193257">
+  <meta name="MobileOptimized" content="width">
+  <meta name="HandheldFriendly" content="true">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="description" content="Bienvenid@s a Teacher Tools, tu asisente para gestionar clases">
+
+  <!-- Enlaces de archivos para configuracion del sitio y PWA -->
+  <link rel="shortcut icon" href="./imagenes/MaestroDesktop.png" type="image/x-icon">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="apple-touch-icon" href="imagenes/MaestroMobile.png">
+  <link rel="apple-touch-startup-image" media="(device-width: 375px) and (device-height: 812px)"
+    href="imagenes/MaestroMobile.png">
+  <link rel="manifest" href="manifest.json">
+
+
+  <link rel="manifest" href="manifest.json">
 
 <body>
 
