Correccion html head

--- a/index.html
+++ b/index.html
@@ -1,30 +1,32 @@
 <!DOCTYPE html>
 <html lang='es'>
 
-  <!-- Titulo Principal (Pestaña Browser) -->
-  <title>Teacher Tools</title>
+  <head>
 
-  <!-- Configuración etiquetas Meta -->
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="theme-color" content="#193257">
-  <meta name="MobileOptimized" content="width">
-  <meta name="HandheldFriendly" content="true">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="description" content="Bienvenid@s a Teacher Tools, tu asisente para gestionar clases">
+    <!-- Titulo Principal (Pestaña Browser) -->
+    <title>Teacher Tools</title>
 
-  <!-- Enlaces de archivos para configuracion del sitio y PWA -->
-  <link rel="shortcut icon" href="./imagenes/MaestroDesktop.png" type="image/x-icon">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="apple-touch-icon" href="imagenes/MaestroMobile.png">
-  <link rel="apple-touch-startup-image" media="(device-width: 375px) and (device-height: 812px)"
-    href="imagenes/MaestroMobile.png">
-  <link rel="manifest" href="manifest.json">
+    <!-- Configuración etiquetas Meta -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="theme-color" content="#193257">
+    <meta name="MobileOptimized" content="width">
+    <meta name="HandheldFriendly" content="true">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="description" content="Bienvenid@s a Teacher Tools, tu asisente para gestionar clases">
 
-
-  <link rel="manifest" href="manifest.json">
+    <!-- Enlaces de archivos para configuracion del sitio y PWA -->
+    <link rel="shortcut icon" href="./imagenes/MaestroDesktop.png" type="image/x-icon">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="apple-touch-icon" href="imagenes/MaestroMobile.png">
+    <link rel="apple-touch-startup-image" media="(device-width: 375px) and (device-height: 812px)"
+      href="imagenes/MaestroMobile.png">
+    <link rel="manifest" href="manifest.json">
+    <link rel="manifest" href="manifest.json">
+    
+  </head>
 
 <body>
 
