Genero imagen para desktop

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="HandheldFriendly" content="true">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="description" content="Bienvenid@s a Teacher Tools, tu asisente para gestionar clases">
+    <meta name="description" content="Bienvenid@s a Teacher Tools, tu asistente para gestionar clases">
 
     <!-- Enlaces de archivos para configuracion del sitio y PWA -->
     <link rel="shortcut icon" href="./imagenes/MaestroDesktop.png" type="image/x-icon">
