- Centro contenedor general para que sea app unica - Cambio titulo por List Gen - Cambio icono desktop y Mobile y su tamaño - Configuro tamaño de contenedor general y botones para Landscape

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
 
     <!-- Titulo Principal (Pestaña Browser) -->
-    <title>Teacher Tools</title>
+    <title>List Gen</title>
 
     <!-- Configuración etiquetas Meta -->
     <meta charset="UTF-8">
@@ -15,14 +15,14 @@
     <meta name="HandheldFriendly" content="true">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="description" content="Bienvenid@s a Teacher Tools, tu asistente para gestionar clases">
+    <meta name="description" content="Bienvenid@s a List Gen, tu generador de listas personalizado">
 
     <!-- Enlaces de archivos para configuracion del sitio y PWA -->
-    <link rel="shortcut icon" href="./imagenes/MaestroDesktop.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./imagenes/listado1239.png" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="apple-touch-icon" href="imagenes/MaestroMobile.png">
+    <link rel="apple-touch-icon" href="imagenes/listado1280.png">
     <link rel="apple-touch-startup-image" media="(device-width: 375px) and (device-height: 812px)"
-      href="imagenes/MaestroMobile.png">
+      href="imagenes/listado1280.png">
     <link rel="manifest" href="manifest.json">
 
   </head>
