- Agrego estios a los sweet alerts - modifico funcion ordenar datos para responder al sweet alert

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <meta name="description" content="Bienvenid@s a List Gen, tu generador de listas personalizado">
 
     <!-- Enlaces de archivos para configuracion del sitio y PWA -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="shortcut icon" href="./imagenes/listado1239.png" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
     <link rel="apple-touch-icon" href="imagenes/listado1280.png">
